--- a/css/styles.css
+++ b/css/styles.css
@@ -764,8 +764,65 @@ body {
 .footer-ocial-list-link:focus .footer-social-list-icon {
 	fill: var(--primary-white-color);
 }
+
+.footer-action-text{
+	margin-left: 93px;
+}
+
+.footer-distibution-list-form{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-left: 93px;
+}
+.footer-distibution-list-input{
+	margin-right: 12px;
+	padding-left: 16px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+	width: 358px;
+	height: 50px;
+	color: var(--primary-white-color);
+	background-color: transparent;
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+		
+.footer-distibution-list-input:focus {
+	outline: none;
+	border-color: var(--accent-color);
+}
+
+.footer-distibution-list-btn{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 10px 28px;
+	width: 200px;
+	height: 50px;
+	background: var(--accent-color);
+	border-color: var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	overflow: hidden;
+	border-radius: 4px;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	text-align: center;
+	color: var(--primary-white-color);
+	cursor: pointer;
+}
+
+.footer-distibution-list-icon{
+	margin-left: 10px;
+}
+
 /* =============== /FOOTER =============== */
 
+/* =============== CONTACT FORM =============== */
 .backdrop {
 	position: fixed;
 	top: 0;
@@ -774,6 +831,12 @@ body {
 	right: 0;
 	background-color: rgba(0, 0, 0, 0.2);
 	transition: opacity 500ms linear, visibility 500ms linear;
+}
+
+.backdrop.is-hidden {
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
 }
 
 .modal {
@@ -801,13 +864,12 @@ body {
 	background-color: var(--primary-white-color);
 	cursor: pointer;
 	padding: 0;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop.is-hidden {
-	opacity: 0;
-	visibility: hidden;
-	pointer-events: none;
-}
+.modal-close-btn:hover {
+	fill: var(--accent-color);
+ }
 
 .contact-form{
 	display: flex;
@@ -838,15 +900,110 @@ body {
 	color: var(--secondary-text-color);
 }
 
+.contact-form-input-wrapper{
+	position: relative;
+	margin-top: 4px;
+}
+
 .contact-form-input{
 	width: 100%;
 	height: 40px;
 	padding-left: 42px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-form-input:focus{
 	outline: none;
-	border-color: var(--accent-color)
+	border-color: var(--accent-color);
 }
+
+.contact-form-icon{
+	position: absolute;
+	top: 50%;
+	left: 12px;
+	transform: translateY(-50%);
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-input:focus + .contact-form-icon{
+	fill: var(--accent-color);
+}
+
+.contact-form-message{
+	width: 100%;
+	height: 120px;
+	margin-top: 4px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	resize: none;
+	padding: 12px 16px;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-message::placeholder{
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 1.14;
+	letter-spacing: 0.01em;
+	color: rgba(117, 117, 117, 0.5);
+}
+
+.contact-form-message:focus{
+	outline: none;
+	border-color: var(--accent-color);
+}
+
+.contact-form-checkbox-label{
+	display: flex;
+	align-items: center;
+	font-size: 14px;
+	margin-bottom: 30px;
+}
+
+.contact-form-checkbox-label::before{
+	display: block;
+	width: 16px;
+	height: 15px;
+	border: 1px solid var(--secondary-text-color);
+	border-radius: 2px;
+	cursor: pointer;
+	content: '';
+	margin-right: 7px;
+}
+
+.contact-form-checkbox:checked + .contact-form-checkbox-label::before{
+	border-color: var(--accent-color);
+	background-color: var(--accent-color);
+	background-image: url(../images/check.svg);
+	background-repeat: no-repeat;
+	background-size: contain;
+	background-origin: border-box;
+}
+.contact-form-checkbox:focus + .contact-form-checkbox-label::before {
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.contact-form-btn {
+	min-width: 200px;
+	align-self: center;
+	font-weight: 700;
+	font-size: 16px;
+	line-height: 1.88;
+	letter-spacing: 0.06em;
+	color: var(--primary-white-color);
+	background-color: var(--accent-color);
+	border: 1px solid var(--accent-color);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	padding: 10px 55px 10px 56px;
+	cursor: pointer;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-btn:hover,
+.contact-form-btn:focus {
+	background-color: #188CE8;
+}
+/* =============== /CONTACT FORM =============== */
